--- a/monitor/world.html
+++ b/monitor/world.html
@@ -31,8 +31,8 @@
     <div class="total-item" data-name="cdn"><div>CDN节点：</div><span>0</span>个</div>
     <div class="total-item" data-name="ta"><div>发射塔：</div><span>0</span>座</div>
     <div class="total-item" data-name="live"><div>直播频道：</div><span>0</span>套</div>
-    <div class="total-item" data-name="country"><div>覆盖国家：</div><span>0</span>个</div>
-    <div class="total-item" data-name="person"><div>覆盖人口：</div><span>0</span>亿</div>
+    <!-- <div class="total-item" data-name="country"><div>覆盖国家：</div><span>0</span>个</div>
+    <div class="total-item" data-name="person"><div>覆盖人口：</div><span>0</span>亿</div> -->
   </div>
   <div class="legend">
     <div class="legend-item checked" data-name="ALL">
